/*
Tamzid
Parameter string management system. Could come in handy later when
alot of parameters are used in the animator controller and used in
any scripts
Change the parameter string here and no need to go and search in the 
other scripts and updating them in all instances
*/
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimatorParamStrings
{
    internal static string isMoving = "isMoving";
    internal static string isJumping = "isJumping";
    internal static string isSliding = "isSliding";
    internal static string yVelocity = "yVelocity";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
}